@@ -1,0 +1,3 @@
+package Object : interface {
+
+}
