@@ -49,10 +49,10 @@ int SPVM_yylex(SPVM_YYSTYPE* yylvalp, SPVM_COMPILER* compiler) {
   
   while(1) {
     // Get current character
-    char c = *compiler->bufptr;
+    char ch = *compiler->bufptr;
     
     // line end
-    switch(c) {
+    switch (ch) {
       case '\0':
         compiler->cur_file = NULL;
         free(compiler->cur_src);
@@ -197,6 +197,7 @@ int SPVM_yylex(SPVM_YYSTYPE* yylvalp, SPVM_COMPILER* compiler) {
       /* Skip space character */
       case ' ':
       case '\t':
+      case '\r':
         compiler->bufptr++;
         continue;
 
@@ -766,7 +767,7 @@ int SPVM_yylex(SPVM_YYSTYPE* yylvalp, SPVM_COMPILER* compiler) {
       }
       default:
         /* Variable */
-        if (c == '$') {
+        if (ch == '$') {
           /* Save current position */
           const char* cur_token_ptr = compiler->bufptr;
           
@@ -801,7 +802,7 @@ int SPVM_yylex(SPVM_YYSTYPE* yylvalp, SPVM_COMPILER* compiler) {
           return VAR_NAME;
         }
         /* Number literal */
-        else if (isdigit(c)) {
+        else if (isdigit(ch)) {
           const char* cur_token_ptr;
           
           // Before character is minus
@@ -1019,7 +1020,7 @@ int SPVM_yylex(SPVM_YYSTYPE* yylvalp, SPVM_COMPILER* compiler) {
           return CONSTANT;
         }
         // Keyword or name
-        else if (isalpha(c) || c == '_') {
+        else if (isalpha(ch) || ch == '_') {
           // Save current position
           const char* cur_token_ptr = compiler->bufptr;
           
@@ -1282,6 +1283,7 @@ int SPVM_yylex(SPVM_YYSTYPE* yylvalp, SPVM_COMPILER* compiler) {
                   compiler->before_is_package = 1;
                   
                   yylvalp->opval = SPVM_TOKE_newOP(compiler, SPVM_OP_C_ID_PACKAGE);
+                  
                   return PACKAGE;
                 }
                 
@@ -1350,6 +1352,8 @@ int SPVM_yylex(SPVM_YYSTYPE* yylvalp, SPVM_COMPILER* compiler) {
                 break;
             }
           }
+
+    
           
           if (has_double_underline) {
             fprintf(stderr, "Can't contain __ in package, subroutine or field name at %s line %" PRId32 "\n", compiler->cur_file, compiler->cur_line);
@@ -1387,7 +1391,7 @@ int SPVM_yylex(SPVM_YYSTYPE* yylvalp, SPVM_COMPILER* compiler) {
         compiler->bufptr++;
         yylvalp->opval = SPVM_TOKE_newOP(compiler, SPVM_OP_C_ID_NULL);
         
-        return (int) (uint8_t) c;
+        return (int) (uint8_t) ch;
     }
   }
 }
