@@ -1,5 +1,6 @@
 0.0319 2018-03-21
   - add interface descriptor to package declaration
+  - fix bug that empty package parsing fail
 0.0318 2018-03-20
   - field become public by default
   - remove set, get keyword
